[gd_scene load_steps=4 format=3 uid="uid://dsh3fosuphuuo"]

[ext_resource type="Script" path="res://scripts/Characters/player_brain_component.gd" id="1_jpu7d"]
[ext_resource type="PackedScene" uid="uid://cn1vwhwg8kdvm" path="res://scenes/Characters/creature_component.tscn" id="2_u5n5x"]
[ext_resource type="Texture2D" uid="uid://kiicrhe5264c" path="res://textures/effects/lights/Circular Light.png" id="3_clogi"]

[node name="PlayerBrainComponent" type="Node2D"]
script = ExtResource("1_jpu7d")

[node name="CreatureComponent" parent="." groups=["player"] instance=ExtResource("2_u5n5x")]
unique_name_in_owner = true

[node name="CameraRotation" type="Marker2D" parent="CreatureComponent"]
unique_name_in_owner = true

[node name="Camera2D" type="Camera2D" parent="CreatureComponent/CameraRotation"]
unique_name_in_owner = true
position = Vector2(73, 0)
offset = Vector2(50, 0)
zoom = Vector2(2, 2)
position_smoothing_enabled = true
metadata/_edit_lock_ = true

[node name="PointLight2D" type="PointLight2D" parent="CreatureComponent"]
color = Color(0.890196, 0.545098, 0.164706, 1)
energy = 1.21
shadow_enabled = true
texture = ExtResource("3_clogi")
texture_scale = 2.28

[connection signal="died" from="CreatureComponent" to="." method="_on_creature_component_died"]

[editable path="CreatureComponent"]
